--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "mongodb": "^5.7.0",
