--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.353.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "mime-types": "^2.1.35",
+    "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "multiparty": "^4.2.3",
     "next": "13.4.13",
     "next-auth": "^4.22.4",
     "openai": "^4.0.0",
