--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.353.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
