--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multiparty": "^4.2.3",
     "next": "13.4.13",
     "next-auth": "^4.22.4",
+    "next-pwa": "^5.6.0",
     "openai": "^4.0.0",
     "postcss": "^8.4.27",
     "react": "18.2.0",
