--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.0.0",
     "postcss": "^8.4.27",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
     "react-sweetalert2": "^0.6.0",
